fix: Better align to Foundation breakpoints

--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -29,13 +29,12 @@ label { font-weight: 500; font-size: 0.875rem; }
 .l-sm-horiz label,
 .l-sm-horiz .input-text { display: inline-block; }
 
-@media (min-width: 720px) {
+@media screen and (min-width: 40em) { /* was 720px */
+
     .comment-main, .post-main { order: 1; }
     .comment-details, .post-details { order: 2; }
     .form-actions { order: 10; }
-}
 
-@media (min-width: 720px) {
     .l-md-vert label,
     .l-md-vert .input-text {
         display: block;
@@ -46,7 +45,7 @@ label { font-weight: 500; font-size: 0.875rem; }
     }
 }
 
-@media (min-width: 960px) {
+@media screen and (min-width: 64em) { /* was 960px */
     .l-lg-vert label,
     .l-lg-vert .input-text {
         display: block;
@@ -68,9 +67,6 @@ label { font-weight: 500; font-size: 0.875rem; }
     padding-top: 15px;
 }
 
-.view-post-create {
-    
-}
 
 .post-details .cell + .cell {
     margin-top: 10px;
@@ -123,10 +119,6 @@ a svg {
     overflow: hidden;
 }
 
-.app-nav a:hover {
-    
-}
-
 .app-nav .icon {
     display: block;
     width: 1.5rem;
@@ -138,6 +130,7 @@ a svg {
     background-position: 0 0;
     padding: 3px;
 }
+
 .app-nav .icon::before {
     display: block;
     content: "";
@@ -145,28 +138,27 @@ a svg {
     background-color: rgba(255,0,0,0.8);
     transition: background-color 0.45s ease-out;
 }
+
 .app-nav :hover .icon::before {
     background-color: rgba(255,255,255,0.8);
     transition: background-color 0.25s ease-out;
 }
 
-@media (min-width: 560px) {
+@media (min-width: 40em) {  /* was 560px */
     .app-nav ul { padding: 0 40px; }
     .app-nav .icon { width: 1.65rem; height: 1.65rem; background-size: 1.65rem 1.65rem; }
 }
-@media (min-width: 720px) {
-    .app-nav { left: 0; top: 0; bottom: 0; padding: 1rem 0.5rem; max-width: 54px; }
+
+@media (min-width: 720px) {  /* was 720px */
+    .app-nav { left: 0; top: 0; bottom: 0; padding: 1rem 0.25rem; max-width: 44px; }
     .app-nav ul { padding: 0; flex-flow: column nowrap; }
     .app-nav li + li { margin-top: 0.75rem; }
     .app-nav .icon { width: 1.85rem; height: 1.85rem; background-size: 1.85rem 1.85rem; }
 }
-@media (min-width: 960px) {
-    .app-nav .icon { width: 2rem; height: 2rem; background-size: 2rem 2rem; }
-}
-@media (min-width: 1024px) {
-    .app-nav .icon { width: 2rem; height: 2rem; background-size: 2rem 2rem; }
-}
 
+@media (min-width: 75em) {  /* was 1024px */
+    .app-nav .icon { width: 2rem; height: 2rem; background-size: 2rem 2rem; }
+}
 
 .nav-btc .icon {
     background-image: url("../img/coins/bitcoin.png");
@@ -227,28 +219,28 @@ a svg {
     overflow-y: auto;
 }
 
-@media (min-width: 560px) {
+@media (min-width: 40em) { /* was 560px */
     .app-header .grid-x,
     .app-footer .grid-x,
     .app-content { max-width: 100%; }
     .app-content { padding: 20px 10px 50px; }
 }
-@media (min-width: 720px) {
+@media (min-width: 720px) { /* was 720px */
     .app-header .grid-x,
     .app-footer .grid-x,
-    .app-content { max-width: 700px; }
+    .app-content { max-width: 670px; }
     .app-content { padding: 20px 7px 60px; }
 }
-@media (min-width: 960px) {
+@media (min-width: 64em) { /* was 960px */
     .app-header .grid-x,
     .app-footer .grid-x,
-    .app-content { max-width: 920px; }
+    .app-content { max-width: 980px; }
     .app-content { padding: 25px 10px 70px; }
 }
-@media (min-width: 1024px) {
+@media (min-width: 75em) { /* was 1024px */
     .app-header .grid-x,
     .app-footer .grid-x,
-    .app-content { max-width: 1000px; }
+    .app-content { max-width: 1140px; }
     .app-content { padding: 25px 12px 80px; }
 }
 
